## ====================================================================
## file:	Makefile.am
## contents:	automake template
## author:      stefan kersten <steve@k-hornz.de>
## CVS:         $Id$
## ====================================================================

MAINTAINERCLEANFILES		= Makefile.in

libsclangincludedir		= $(pkgincludedir)
libsclanginclude_HEADERS =	\
	AdvancingAllocPool.h	\
	AllocPools.h		\
	bullet.h		\
	ByteCodeArray.h		\
	FIFOT.h			\
	GC.h			\
	HashTable.h		\
	InitAlloc.h		\
	MiscInlineMath.h	\
	Opcodes.h		\
	OSCData.h		\
	PowerOfTwoAllocPool.h	\
	PredefinedSymbols.h	\
	PriorityQueue.h		\
	PyrArchiverT.h		\
	PyrDeepCopier.h		\
	PyrDeepFreezer.h	\
	PyrErrors.h		\
	PyrFilePrim.h		\
	PyrFileUtils.h		\
	PyrInterpreter.h	\
	PyrKernel.h		\
	PyrKernelProto.h	\
	PyrLexer.h		\
	PyrListPrim.h		\
	PyrMathPrim.h		\
	PyrMessage.h		\
	PyrObject.h		\
	PyrObjectProto.h	\
	PyrParseNode.h		\
	PyrPrimitive.h		\
	PyrPrimitiveProto.h	\
	PyrSched.h		\
	PyrSignal.h		\
	PyrSignalPrim.h		\
	PyrSlot.h		\
	PyrSymbol.h		\
	PyrSymbolTable.h	\
	readSamples.h		\
	ReadWriteMacros.h	\
	Samp.h			\
	SCBase.h		\
	SC_List.h		\
	SC_LogFile.h		\
	SC_Msg.h		\
	SC_SynthImpl.h		\
	SC_UnorderedList.h	\
	SFHeaders.h		\
	SimpleStack.h		\
	VMGlobals.h

noinst_HEADERS =		\
	SC_ComPort.h

## EOF ================================================================
