## ====================================================================
## file:	Makefile.am
## contents:	automake template
## author:      stefan kersten <steve@k-hornz.de>
## CVS:         $Id$
## ====================================================================

MAINTAINERCLEANFILES		= Makefile.in

libsclangincludedir		= $(pkgincludedir)/lang
libsclanginclude_HEADERS	= \
	AdvancingAllocPool.h \
	AllocPools.h \
	ByteCodeArray.h \
	FIFOT.h \
	GC.h \
	HashTable.h \
	InitAlloc.h \
	MiscInlineMath.h \
	OSCData.h \
	Opcodes.h \
	PowerOfTwoAllocPool.h \
	PredefinedSymbols.h \
	PriorityQueue.h \
	PyrArchiverT.h \
	PyrDeepCopier.h \
	PyrDeepFreezer.h \
	PyrErrors.h \
	PyrFilePrim.h \
	PyrFileUtils.h \
	PyrInterpreter.h \
	PyrKernel.h \
	PyrKernelProto.h \
	PyrLexer.h \
	PyrListPrim.h \
	PyrMathPrim.h \
	PyrMessage.h \
	PyrObject.h \
	PyrObjectProto.h \
	PyrParseNode.h \
	PyrPrimitive.h \
	PyrPrimitiveProto.h \
	PyrSched.h \
	PyrSignal.h \
	PyrSignalPrim.h \
	PyrSlot.h \
	PyrSymbol.h \
	PyrSymbolTable.h \
	ReadWriteMacros.h \
	SCBase.h \
	SC_ComPort.h \
	SC_LanguageClient.h \
	SC_LibraryConfig.h \
	SC_List.h \
	SC_LogFile.h \
	SC_Msg.h \
	SC_SynthImpl.h \
	SC_TerminalClient.h \
	SC_UnorderedList.h \
	SFHeaders.h \
	Samp.h \
	SimpleStack.h \
	VMGlobals.h \
	bullet.h \
	libraryConfig.h \
	readSamples.h

## EOF ================================================================
